# project-templates

plow-haskell/: LICENSE  template.toml  {{ project }}.cabal
