cabal-version:       2.2
name:                {{ project }}
version:             {{ version }}
-- synopsis:
-- description:
homepage:            https://github.com/{{ github_username  }}/{{  project  }}#readme
license:             {{  license  }}
license-file:        LICENSE
author:              {{ name }}
maintainer:          {{ email }}
copyright:           Copyright: (c) {{ year }} {{  name  }}
category:            Data
build-type:          Simple
extra-doc-files:     README.org
                     CHANGELOG.md
extra-source-files:  stack.yaml
                   , cabal.project.local

common deps
       
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3 -Wall -Werror
  build-depends:       base >= 4.3 && < 5


library
  import:              deps
  hs-source-dirs:      src
  exposed-modules:     Lib
  default-language:    Haskell2010






executable {{ project }}
  import:              deps
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       {{ project }}
  default-language:    Haskell2010




test-suite {{ project }}-test
  import:              deps
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       {{ project }}
                     , hspec

  default-language:    Haskell2010




benchmark {{ project }}-bench
  import:              deps
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       {{ project }}
                     , criterion
  
  default-language:    Haskell2010




source-repository head
  type:     git
  location: https://github.com/{{ github_username }}/{{ project }}
